# solana-copy-trading-bot-rust

./: .env  Cargo.toml  ReadMe.md  targetlist.txt
src/: lib.rs  main.rs
src/common/: config.rs  logger.rs  mod.rs
src/engine/: mod.rs  monitor.rs  swap.rs
src/services/: jito.rs
