[package]
name = "solana-copytrading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
log = "0.4.20"
env_logger = "0.10.2"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11.24", features = ["json"] }
chrono = "0.4.33"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bytemuck = "1.14.3"
dotenv = "0.15.0"
lru = "0.12.3"
bincode = "1.3.3"
base64 = "0.21"
tokio-stream = "0.1.15"
